adicionando o javaScript e corrigindo bugs do input

--- a/index.html
+++ b/index.html
@@ -44,11 +44,13 @@
             </div>
 
             <p>* campos obrigatórios </p>
-            <a href="#" class="botao">Enviar</a>
+            <a href="#" class="botao" id="botao">Enviar</a>
 
         </form>
 
     </main>
+
+    <script type="text/javascript" src="src/js/index.js"></script>
 </body>
 
 </html>
